added MC tests for caplet and edf

--- a/documentation/MarketRiskDocumentation.tex
+++ b/documentation/MarketRiskDocumentation.tex
@@ -86,7 +86,7 @@ The price of a caplet is the following:
 Where \(\hat{E}\) is the measure induced by \(B(t, T)\).  Under this measure, the dynamics of \(B(T, T+\delta)\) are 
 \[d\frac{B(t, T+\delta)}{B(t, T)}\]
 \[=\left(\sigma(t, T+\delta)-\sigma(t, T)\right) \frac{B(t, T+\delta)}{B(t, T)}d\hat{W}_t\]
-Where \(\sigma(t, T\) is the volatility of \(B(t, T)\).
+Where \(\sigma(t, T)\) is the volatility of \(B(t, T)\).
 
 \subsection{Bond volatility} \label{bondvolatility}
 In the Hull-White model, the volatility of the bond price is deterministic: \(\sigma(t, T)=\frac{\sigma}{a}(1-e^{-a(T-t)})\)
